  - add custom dll overrides outside from the list [BUG-60];
  - Revert "Kill dead online components" breaks the Qt5 build [BUG-62];
  - Do not build wineappdb core components if -DWITH_WINEAPPDB=OFF is set [BUG-62];
  - 'Run -> Browser' on Programs window not work [BUG-54];
  - QT5: Winetricks application list fails to refresh and causes segfault on quit [BUG-53];

Version 1.1-r2
 Fixed:
  - Error while loading application settings by key: 'WineLibs' [BUG-42];

Version 1.1-r1
 Fixed:
  - Error while loading application settings by key: 'WineLibs' [BUG-42];
  - Updated Afrikaans translation. thx 2 Danie Wessels;
  - Fixed cmake warnings;
  - Updated .desktop file;

Version 1.1
 Added:
  - extended list of a virtual desktop resolutions [BUG-35];
  - configure multiple wine paths globally to allow easily selection in prefixes [BUG-23];
  - create predefined execution template strings for optirun, separate X display, e.t.c. [BUG-37];

 Fixed:
  - Gentoo: QtSingleApplication package not found with DWITH_SYSTEM_SINGLEAPP=ON [BUG-39];
  - FreeBSD\clang error: use of undeclared identifier 'LC_*' [BUG-41];

Version 1.0-r3
 Fixed:
  - "Use single-click to run icons" does not affect icons in "setup" tab [BUG-27];
  - q4wine.desktop value "" for key "Path" in group "Desktop Entry" [BUG-29];
  - Pre and Post run Icon scripts unusable, if the path contains ")" [BUG-33];

 Added:
  - Keyboard navigation for items in "setup" and "icon" tabs;
  - Afrikaans translation. Thx 2 Danie Wessels;

Version 1.0-r2
 Fixed:
  - Clean setup: error while loading application settings by key: prefixDefaultPath [BUG-25];
  - Winetricks plugin does not check script presence [BUG-26];
  - "Use single-click to run icons" does not affect icons in "setup" tab [BUG-27];
 Added:
  - Persian translation. Thx 2 Arash Ariayee;
  - Winetricks plugin can use script installed in system [BUG-28];

Version 1.0-r1
 Fixed:
  - Prefix tree "Delete" menu item do not remove menu tree.