@@ -230,9 +230,7 @@ file(APPEND ${CMAKE_SOURCE_DIR}/config.h "\n#endif\n" )
 IF( NOT RELEASE )
     file(APPEND ${CMAKE_SOURCE_DIR}/config.h "#define APP_BUILD \"${CMAKE_CURRENT_BINARY_DIR}\"\n" )
 ENDIF ( NOT RELEASE )
-IF(${CMAKE_VERSION} GREATER OR EQUAL 2.8.8)
     MESSAGE(STATUS "QT5                           : ${QT5}")
-ENDIF(${CMAKE_VERSION} GREATER OR EQUAL 2.8.8)
     MESSAGE(STATUS "WITH_ICOUTILS                 : ${WITH_ICOUTILS}")
     MESSAGE(STATUS "WITH_SYSTEM_SINGLEAPP         : ${WITH_SYSTEM_SINGLEAPP}")
     MESSAGE(STATUS "WITH_WINEAPPDB                : ${WITH_WINEAPPDB}")
