@@ -580,6 +580,11 @@ void corelib::getBuildFlags(){
     QTextStream Qcout(stdout);
     Qcout<<QObject::tr("Buildtime flags are:")<<endl<<endl;
     Qcout<<qSetFieldWidth(25)<<left<<" CMAKE_INSTALL_PREFIX"<<QString::fromUtf8(APP_PREF)<<qSetFieldWidth(0)<<endl<<endl;
+#ifdef QT5
+    Qcout<<qSetFieldWidth(25)<<left<<" QT5"<<"ON"<<qSetFieldWidth(0)<<endl;
+#else
+    Qcout<<qSetFieldWidth(25)<<left<<" QT5"<<"OFF"<<qSetFieldWidth(0)<<endl;
+#endif
 #ifdef RELEASE
     Qcout<<qSetFieldWidth(25)<<left<<" RELEASE"<<"ON"<<qSetFieldWidth(0)<<endl;
 #else
