@@ -14,6 +14,7 @@ Version 1.2
   - Do not build wineappdb core components if -DWITH_WINEAPPDB=OFF is set [BUG-62];
   - 'Run -> Browser' on Programs window not work [BUG-54];
   - QT5: Winetricks application list fails to refresh and causes segfault on quit [BUG-53];
+  - Make -DQT5 flag visible during cmake build and runtime;
 
 Version 1.1-r2
  Fixed:
